<resources>
    <string name="app_name">WeBuy</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Existing user</string>
    <string name="tab_text_2">New user</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="text_hint"><b>Search...</b></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--onboarding designs-->
    <string name="onboardingWelcomeContent"> This application is the best way to take advantage of promotions together, to pay less, and be environmentally friendly</string>
    <string name="onboardingSpinWinContent">nothing </string>
    <string name="onboardingRecommenderContent">You could create a basket with an integrated chat system, and invite other customers to participate.
Swipe again to the right to return to the reception. </string>
    <string name="onboarding_welcome_3">Welcome 3</string>
    <string name="onboarding_welcome_2">Tricks</string>
    <string name="onboarding_welcome_1">Welcome</string>
    <string name="submit">Add deal</string>
    <string name="add_an_offer">Add an offer</string>
    <string name="add_an_image">Add an image</string>
    <string name="title">Title</string>
    <string name="before">Before</string>
    <string name="euro">€</string>
    <string name="after">After</string>
    <string name="quantity_available">Quantity available :</string>
    <string name="quantity_to_buy">Quantity to Buy :</string>
    <string name="description">Description :</string>
    <string name="post">Post</string>
    <string name="back_to_home">Back to\nHome</string>
    <string name="likes">Likes</string>
    <string name="unlikes">Unlikes</string>
    <string name="participate">Participate</string>
    <string name="welcome">Welcome</string>
    <string name="hook">Cheaper and ecological</string>
    <string name="sign">Sign up / Login</string>
    <string name="see_the_deals">" See the deals"</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="notifications">Notifications</string>
    <string name="feeback">Feeback</string>
    <string name="discuss_with_us">Discuss with us</string>
    <string name="login">LOGIN</string>
    <string name="skip_intro">SKIP INTRO</string>
    <string name="stores">Stores</string>
    <string name="type_the_new_password">Type the new password</string>
    <string name="edit_password">Edit password</string>
    <string name="current_password">Current password</string>
    <string name="type_your_password">Type your password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_your_new_password">Confirm your new password</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="d_o_b">D.O.B</string>
    <string name="deal_title">Deal Title</string>
    <string name="see_more">See more</string>
    <string name="user">User</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="store_title">Store title</string>
    <string name="current_deals">Current deals :</string>
    <string name="stores_number">Stores\'s number :</string>
    <string name="shop_now_with_others_nand_pay_with_them">Shop now with others, \nand pay with them</string>
    <string name="favorite_deals">Favorite deals</string>
    <string name="begin_at">Begin at</string>
    <string name="edited_at">Edited at</string>
    <string name="current_purshase_group">Current purshase group :</string>
    <string name="purshase_group">Purshase group</string>
    <string name="deal">Deal</string>
    <string name="back_to_ndeals">Back to\nDeals</string>
    <string name="create_or_join_a_purshase_groupe">Create or join a purshase groupe</string>
    <string name="deal_s_details">Deal\'s details</string>
    <string name="price">Price</string>
    <string name="before_s_price">Before\'s price</string>
    <string name="end_at">End at</string>
    <string name="unknown_error">Unknown error</string>
    <string name="choose_image">You didn\'t choose an image</string>
    <string name="comments">Comments</string>
    <string name="kind_likes">kind Likes</string>
    <string name="got_on_deals">Got on deals</string>
    <string name="cazy_unlikes">Cazy Unlikes</string>
    <string name="on_webuy">On WeBuy</string>
    <string name="purshases">Purshases</string>
    <string name="deals_added">Deals Added</string>
    <string name="interactions">Interactions</string>
    <string name="admin_profile">Admin profile</string>
    <string name="admin_quantity">Admin quantity</string>
    <string name="create_buying_group">Create buying group</string>
    <string name="participants_s_number">Participants\'s number</string>

    <string-array name="magazin">
        <item>Magazin</item>
        <item>Auchan</item>
        <item>Super U</item>
        <item>Leclerc</item>
        <item>Carrefour</item>
    </string-array>

    <string-array name="departement">
        <item>Departement</item>
        <item>37100</item>
        <item>95400</item>
        <item>95000</item>
        <item>37000</item>
        <item>45000</item>
    </string-array>
    <string name="title_activity_list_buying_group">ListBuyingGroupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_friends">FriendsActivity</string>
    <string name="internt_is_not_available">Internet is not avaible</string>
    <string name="common_thanks">Thank you</string>
    <string name="ready">Ready</string>
    <string name="person_left">Person left</string>
    <string name="join_us">Join us</string>
    <string name="admin">Admin</string>
    <string name="current_participants">Current participants :</string>
    <string name="price_per_participant">Price per participant :</string>
    <string name="created_at">Created at :</string>
    <string name="duration">Duration :</string>
</resources>
