<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/dark_mode"
        android:icon="@drawable/ic_dark_mode"
        android:title="@string/dark_mode"
        app:actionViewClass="android.widget.Switch"
        app:showAsAction="always" />


    <item android:title="Profile">
        <menu>
            <item

                android:id="@+id/edit_profile"
                android:icon="@drawable/ic_edit_profile"
                android:title="@string/edit_profile" />
            />
            <item
                android:id="@+id/change_password"
                android:icon="@drawable/ic_edit_password"

                android:title="@string/change_password" />
            />
        </menu>

    </item>

    <item android:title="@string/notifications">
        <menu>
            <item
                android:id="@+id/notification"
                android:icon="@drawable/ic_notifications"

                android:title="@string/notifications"
                app:actionViewClass="android.widget.Switch"
                app:showAsAction="always">

            </item>
        </menu>
    </item>

    <item android:title="@string/feeback">
        <menu>
            <item
                android:id="@+id/feedback"
                android:icon="@drawable/ic_feegback"
                android:title="@string/discuss_with_us" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="Logout" />
        </menu>
    </item>

</menu>
