<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_height="match_parent"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/formulaire"
                style="@style/headerTextPrimary"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:text="@string/add_an_offer" />

            <LinearLayout
                android:id="@+id/add_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@id/formulaire"
                android:alpha="0.4"
                android:background="@drawable/logo_auchan"
                android:orientation="horizontal"></LinearLayout>

            <TextView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_below="@+id/formulaire"
                android:gravity="center"
                android:text="@string/add_an_image"
                android:textSize="25dp"
                android:textStyle="bold">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_title"
                style="@style/parent"
                android:layout_below="@id/formulaire"
                android:layout_marginTop="@dimen/signup_text_margin_top"
                android:layout_toRightOf="@id/add_image">

                <EditText
                    style="@style/modifiedEditText"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/add_prix_before"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_below="@id/add_title"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/add_image">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"

                    android:layout_marginTop="@dimen/signup_text_margin_top">

                    <EditText
                        style="@style/modifiedEditText"
                        android:hint="@string/before"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="20sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/euro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_title"
                android:layout_marginTop="25dp"
                android:layout_toRightOf="@id/add_prix_before"
                android:text="@string/euro"
                android:textSize="20dp">

            </TextView>

            <LinearLayout
                android:id="@+id/add_prix_after"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_below="@id/add_title"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/euro">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/parent"

                    android:layout_marginTop="@dimen/signup_text_margin_top">

                    <EditText
                        style="@style/modifiedEditText"
                        android:hint="@string/after"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textSize="20dp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_title"
                android:layout_marginTop="25dp"
                android:layout_toRightOf="@id/add_prix_after"
                android:text="@string/euro"
                android:textSize="20dp">

            </TextView>

            <LinearLayout
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_image"
                android:gravity="center">

                <Spinner
                    android:id="@+id/magazin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/add_image"
                    android:layout_marginLeft="50dp"></Spinner>

                <Spinner
                    android:id="@+id/departement"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@id/add_image"
                    android:layout_marginLeft="50dp"
                    android:layout_toRightOf="@id/magazin"></Spinner>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_qnt_dispo"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_below="@id/spinner"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_available"
                    android:textColor="@color/blackTextColor"
                    android:textSize="20dp">

                </TextView>

                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content">

                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_qnt_achete"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_below="@id/add_qnt_dispo">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/quantity_to_buy"
                    android:textColor="@color/blackTextColor"
                    android:textSize="20dp">

                </TextView>

                <EditText
                    android:layout_width="40dp"
                    android:layout_height="wrap_content">

                </EditText>
            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_qnt_achete"
                android:text="@string/description"
                android:textColor="@color/blackTextColor"
                android:textSize="25dp">

            </TextView>

            <EditText
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:scrollbars="vertical">

            </EditText>

            <Button
                android:id="@+id/BtnParticipate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_text"
                android:layout_centerHorizontal="true"
                android:background="@drawable/login_button_bk"
                android:text="@string/post">

            </Button>
        </RelativeLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>