<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="50dp"
    android:layout_height="match_parent">

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="100dp"

        android:background="@color/whiteBodyColor" >

    </View>
    <LinearLayout
        android:id="@+id/separate"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/card_header" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/view_stores"
        app:layout_constraintTop_toBottomOf="@+id/separate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        >

    <TextView
        android:id="@+id/stores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/bottomNavigationSelectedColor"
        android:layout_marginStart="7dp"
        android:textSize="24dp"
        android:text="@string/stores"/>

        <TextView
            android:id="@+id/viewAllStores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/stores"
            android:layout_marginRight="7dp"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="7dp"
            android:textSize="20dp"
            android:text="@string/see_more"
            tools:ignore="RtlHardcoded" />



            <FrameLayout
                android:layout_width="wrap_content"
                android:id="@+id/storesFrame"
                android:layout_alignParentTop="true"
                android:layout_height="wrap_content">

            </FrameLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/viewDeals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:layout_constraintTop_toBottomOf="@+id/view_stores"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        tools:layout_editor_absoluteY="10dp">

        <TextView
            android:id="@+id/deals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="7dp"
            android:textColor="@color/bottomNavigationSelectedColor"
            android:textSize="24dp"
            android:text="@string/favorite_deals"/>

        <TextView
            android:id="@+id/viewAllDeals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="right"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/deals"
            android:layout_marginRight="7dp"
            android:textColor="@color/colorAccent"

            android:layout_marginLeft="7dp"
            android:textSize="20dp"
            android:text="@string/see_more"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:id="@+id/dealsFrame"
            android:layout_height="wrap_content">

        </FrameLayout>
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>